# NetMorph

./: .gitignore  main.py  pyproject.toml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
cli/: main.py
core/: api.py  database.py  engine.py  matcher.py  models.py  repository.py  settings.py
dashboard/: package-lock.json  package.json  tailwind.config_legacy.js
dashboard/src/: App.tsx  index.css
dashboard/src/components/: AddRuleModal.tsx  HistoryPage.tsx  LogViewer.tsx  RewritesPage.tsx  RuleManager.tsx  SettingsPage.tsx  WorkspaceSwitcher.tsx
dashboard/src/components/layout/: Header.tsx  Sidebar.tsx
dashboard/src/components/ui/: CodeEditor.tsx  button.tsx  input.tsx  select.tsx
dashboard/src/lib/: schemas.ts
proxy/: addon.py
scripts/: trust_cert.ps1
tests/: test_certs.py  test_db.py  test_engine.py  test_hot_reload.py  test_matcher.py  test_mock_engine.py  test_proxy.py  test_script_engine.py
