[project]
name = "requestly"
version = "0.1.0"
description = "NetMorph: Local-first programmable MITM proxy"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiosqlite>=0.22.1",
    "mitmproxy>=12.2.1",
    "fastapi>=0.115.8",
    "uvicorn>=0.34.0",
    "httpx>=0.28.1",
    "pytest-asyncio>=1.3.0",
    "pytest>=9.0.2",
    "rich>=14.3.3",
    "typer>=0.24.1",
]

[project.scripts]
netmorph = "cli.main:app"

[tool.hatch.build.targets.wheel]
packages = ["core", "cli", "proxy"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
